--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=${DB_HOST};Port=${DB_PORT};Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}"
+  },
+
+  "JwtSettings": {
+    "SecretKey": "${JWT_SECRET}",
+    "Issuer": "YourApp",
+    "Audience": "YourUsers",
+    "TokenExpirationInMinutes": 60
+  }
 }
