--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,11 +8,11 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Host=${DB_HOST};Port=${DB_PORT};Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}"
+    "DefaultConnection": ""
   },
 
   "JwtSettings": {
-    "SecretKey": "${JWT_SECRET}",
+    "SecretKey": "YourSuperSecretKey123!",
     "Issuer": "YourApp",
     "Audience": "YourUsers",
     "TokenExpirationInMinutes": 60
