--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,13 @@ services:
   backend:
     build: ./backend
     ports:
-      - "5000:5000"
+      - "5214:5214"
     depends_on:
-      db:
-        condition: service_healthy
+      - db
     environment:
-      - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=yourdb;Username=youruser;Password=yourpassword
+      - ConnectionStrings__DefaultConnection=Host=db;Port=${DB_PORT};Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
+      - JWT_SECRET=${JWT_SECRET}
     restart: always
-
 
   frontend:
     build: ./frontend
@@ -24,16 +23,9 @@ services:
   db:
     image: postgres:15
     environment:
-      - DB_HOST=db
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - JWT_SECRET=${JWT_SECRET}
-      - JWT_ISSUER=${JWT_ISSUER}
-      - JWT_AUDIENCE=${JWT_AUDIENCE}
-      - JWT_TOKEN_EXPIRATION_IN_MINUTES=${JWT_TOKEN_EXPIRATION_IN_MINUTES}
-
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
