Docker services connection fix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /App
 COPY . ./
 RUN dotnet restore "./Backend.csproj"
 RUN dotnet publish "./Backend.csproj" -c Release -o out
+RUN dotnet tool install --global dotnet-ef
+ENV PATH="$PATH:/root/.dotnet/tools"
 
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /App
