--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -21,7 +19,7 @@ services:
       - db
     environment:
       - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
-      - JWT_SECRET=${JWT_SECRET}
+      - ASPNETCORE_ENVIRONMENT=Production
     restart: always
 
   frontend:
@@ -39,12 +37,7 @@ services:
     depends_on:
       - db
     environment:
-      - JWT_SECRET=${JWT_SECRET}
-      - DB_HOST=db
-      - DB_PORT=5432
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASSWORD=${DB_PASSWORD}
+      - ASPNETCORE_ENVIRONMENT=Production
     command: ["tail", "-f", "/dev/null"]
 
 volumes:
