--- a/backend/Dockerfile.migrations
+++ b/backend/Dockerfile.migrations
@@ -3,8 +3,13 @@ FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 
+COPY appsettings.json /App/
+COPY appsettings.Production.json /App/
 COPY ["Backend.csproj", "."]
 RUN dotnet restore "Backend.csproj"
+
+COPY appsettings.json ./
+COPY appsettings.Production.json ./
 
 COPY . . 
 WORKDIR "/src"
