--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,10 @@ RUN npm run build
 
 FROM nginx:alpine
 
+RUN mkdir -p /var/log/nginx
+
 COPY --from=build /app/dist /usr/share/nginx/html
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
