Add Dockerfile configuration for hot reloading in development environment

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,18 @@
+# Development stage for hot reloading
+FROM node:20 AS dev
+
+WORKDIR /app
+
+COPY package*.json ./
+
+RUN npm install
+
+COPY . .
+
+EXPOSE 3000
+
+CMD ["npm", "run", "dev"]
+
 FROM node:20 AS build
 
 WORKDIR /app
