--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,10 @@ services:
 
   backend:
     build: ./backend
+    volumes:
+      - ./backend:/app
+      - /app/bin
+      - /app/obj
     ports:
       - "5214:5214"
     depends_on:
@@ -20,15 +24,25 @@ services:
     environment:
       - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
       - ASPNETCORE_ENVIRONMENT=Production
+      - DOTNET_USE_POLLING_FILE_WATCHER=1
     restart: always
+    command: dotnet watch run
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      target: dev
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     ports:
-      - "3000:80"
+      - "3000:3000"
     depends_on:
       - backend
+    environment:
+      - NODE_ENV=docker
     restart: always
+    command: npm run dev
 
   migration:
     build:
